1.增加导入参数:useStr，是否强制使用字符串读取，默认true。2.暂时撤除集合导入，后期还原。3.